glance/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: glance
  namespace: app-internal
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: infrastructure
      sectionName: websecure
  hostnames:
    - "hub.mikey-liang.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: glance
          port: 8090
